[package]
name = "wasm-hasher"
version = "0.1.1"
authors = ["Axetroy <axetroy.dev@gmail.com>"]
edition = "2021"
repository = "https://github.com/axetroy/wasm-hasher"
readme = "README.md"
description = "computed data hash by webAssembly support md5,sha1,sha2,sha3,sm3,ripemd"
license = "Anti-996"
keywords = [
  "md5",
  "sha",
  "sha1",
  "sha2",
  "sha3",
  "sha256",
  "sha512",
  "ripemd",
  "tiger",
  "wasm",
  "webassembly",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dependencies]
wee_alloc = { version = "0.4.2", optional = true }
wasm-hasher-md5 = { path = "./crate/md5", default-features = false }
wasm-hasher-sha1 = { path = "./crate/sha1", default-features = false }
wasm-hasher-sha2 = { path = "./crate/sha2", default-features = false }
wasm-hasher-sha3 = { path = "./crate/sha3", default-features = false }
wasm-hasher-sm3 = { path = "./crate/sm3", default-features = false }
wasm-hasher-ripemd = { path = "./crate/ripemd", default-features = false }
wasm-hasher-tiger = { path = "./crate/tiger", default-features = false }
wasm-hasher-whirlpool = { path = "./crate/whirlpool", default-features = false }
wasm-hasher-blake = { path = "./crate/blake", default-features = false }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.61"
features = ["console", "FileReader", "Blob", "AbortSignal"]


[workspace]
members = [
  "crate/lib",
  "crate/md5",
  "crate/sha1",
  "crate/sha2",
  "crate/sha3",
  "crate/sm3",
  "crate/ripemd",
  "crate/tiger",
  "crate/whirlpool",
  "crate/blake",
]
